# learn-shader

./: Cargo.toml  README.md  TODO.md
animated/: Cargo.toml  build.rs
animated/assets/shaders/: animate_shader.wgsl
animated/src/: main.rs
custom_phase_item/: Cargo.toml
custom_phase_item/assets/shaders/: custom_phase_item.wgsl
custom_phase_item/src/: main.rs
custom_render_phase/: Cargo.toml
custom_render_phase/assets/shaders/: custom_stencil.wgsl
custom_render_phase/src/: main.rs
ex-1-generate-pattern/: Cargo.toml
ex-1-generate-pattern/assets/shaders/: my_material.wgsl
ex-1-generate-pattern/src/: main.rs
ex-2-custom-render-phase/: Cargo.toml
ex-2-custom-render-phase/assets/shaders/: custom_stencil.wgsl
ex-2-custom-render-phase/src/: main.rs
extended-material/: Cargo.toml
extended-material/assets/shaders/: extended_material.wgsl
extended-material/src/: main.rs
myshaderlib/: Cargo.toml
myshaderlib/src/: lib.rs  lib.wgsl  simplex_noise.wgsl
post_processing/: Cargo.toml
post_processing/assets/shaders/: post_processing.wgsl
post_processing/src/: main.rs
sandbox/: Cargo.toml  README.md
sandbox-plane/: Cargo.toml
sandbox-plane/assets/shaders/: plane_frag.wgsl
sandbox-plane/src/: main.rs
sandbox/assets/shaders/: fragment.wgsl
sandbox/src/: background.rs  camera.rs  config.rs  light.rs  main.rs  meshes.rs  sample.rs
sandbox/src/meshes/: flat_ring_3d.rs  spherical_zone.rs
wesl/: Cargo.toml
wesl/assets/shaders/: custom_material.wesl  util.wesl
wesl/src/: main.rs
