[workspace]
resolver = "3"
members = ["animated"
, "custom_phase_item", "custom_render_phase", "ex-1-generate-pattern", "extended-material", "post_processing", "wesl"]

[workspace.dependencies]
bevy = { version = "0.18", default-features=false }
bytemuck = { version = "1.24" }
nonmax = { version = "0.5" }
