[package]
name = "custom_render_phase"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features=["3d"] }
bytemuck = { workspace = true }
nonmax = { workspace = true }

# ---
# Workaround : see https://github.com/bevyengine/bevy/issues/10425
[dependencies.blake3]
version = "1.8"
features = ["pure"]
# ---
